--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "clean": "rm -rf dist",
-    "init": "tsc"
+    "init": "tsc",
+    "api": "api-extractor init"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,13 @@
   },
   "homepage": "https://github.com/zerosheepmoo/lyk#readme",
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.8.11",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
     "webpack-dev-server": "^3.11.0"
   }
 }
